versioned_docs/version-9.3/Training-Manual/05-Stage-4/20.Collaboration-tools.md
---
title: 20. CT - Collaboration tools
---

:::info
This video has been revised with the changes in Paratext 9.3. See also the **[Paratext manual for details](https://sillsdev.github.io/paratext-manual/20.Collaboration-tools)**.
:::
**Introduction**  
In this module you will use Paratext Live as a way that the team can collaborate together so that everyone can see the changes to the text on their own computers.

**Before you start**  
We have already seen how to collaborate with Send/Receive. There are times, for example during a consultant check, when several people need to look at the same text, and perhaps edit it together. Paratext Live allows everyone to look at the text on their own computer and see the changes being made in real time.

**Why this is important**  
There are several other ways to let everyone look at the same text. But Paratext Live not only lets everyone see the text, but it also allows more than one person to edit the text.

**What are you going to do?**  
-  Connect all users to the same network.
-  Send/receive.
-  Start Paratext Live and join a session
-  Edit the document
-  Exchange all files
-  Exit Paratext Live
-  Send/receive

:::info
The video [4.1 Collaboration Tools](https://vimeo.com/641947293) is available but was recorded in Paratext 9.2.
:::

:::caution Upgrade
Paratext 9.3 allows you to choose a server. Everyone in a particular live session still needs to use the same server, it is just that from 9.3 you can work with someone on 9.1 or someone else on 9.2 (**just not at the same time**.)
:::
## 20.1 Paratext Live
:::tip Before you can start Paratext Live, all users should do a **send/receive** and everyone must be connected to the same network.
:::

### Connect to the same network 

Paratext Live can use  
-  Internet
-  a local network
-  offline Wi-Fi router
-  hotspot with mobile data disabled.

## 20.2 Start Paratext Live
1. Open the **menu** for the project.
1. Under **Tools**, click **Paratext Live**.
1. Or use the icon on the toolbar.  
    -  *Two choices are displayed*  



### Choose the server
1.  If all users are using 9.2 or above you can choose the first option **Internet (primary)**.
     -  *A dialog box is displayed*  
    ![](../media/090e8af3c816f38bb148c7a51a9eb7ba.png)
2.  Click either "Wait to join" or "Start session" (to be the host) as appropriate.  
    -  *A dialog box may be displayed*  
    -  *If Autosave in Paratext Settings is not on, the Live session will turn it on for the duration of the session.*  

If not,

3.  Choose the second option **Select different server**.    
    -  *A dialog box is displayed showing the five options.*  
    ![](../media/7b74b82d46ecc1bc5ab1844cc2923843.png)  

#### Which one do you choose?  
-  Choose the first option **Internet (primary)** if all users have Paratext 9.2 or above
-  Choose the second option Internet (secondary) if any user has Paratext 9.0 or 9.1.
-  Choose the third option if you are all connected to a local area network and want to use that LAN to connect.

#### Join session or wait?
1.  Click **Start/Join session**.
     -  *Paratext then effectively asks if you are the host (that is, you will remain until the end)*
2.  If you are **not** the primary editor/host, click **wait**, don’t press cancel as that will cancel your joining the live session.
3.  If you **are** the host, click **Start Session**.

:::tip
With a session active, the Paratext Live button is **green**.
:::

### Sharing changes from Tools
All scripture text is shared when you do a send/receive. However, changes made with various tools are not shared automatically. Examples of these unshared changes are the spelling status, Parallel passage status, Biblical Terms and their identified renderings, and Notes. To share these changes:

1.  Click the Paratext Live button on the toolbar,
   
  ![](../media/PL-exchange.png)
1.  Click “**Exchange all files**”  
    -  *All of the users then receive updates to these files.*

:::caution
Changes from all users are shared, but if two people have changed the exact same item differently, only one person’s change will be saved.
:::

## 20.3 End the Paratext Live session
1.  Click on the Paratext Live icon.
1.  Choose **End/Leave Live session**.
1.  If you are the principal editor (host), you will see a message.
1.  Click **End the session normally**.
1.  Send/Receive.

:::info
**For more help**, search for **live** in the search box on the title bar. There are lots of useful topics on Paratext Live.
:::
